misc fixes and imps

--- a/notebooks/ModelGlass.ipynb
+++ b/notebooks/ModelGlass.ipynb
@@ -12,12 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "2e524194-63b1-47ba-8e03-27e885374410",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import opticalglass as og\n",
+    "import numpy as np\n",
+    "\n",
+    "import opticalglass as og\n",
     "import opticalglass.schott as schott\n",
     "import opticalglass.opticalmedium as om\n",
     "import opticalglass.modelglass as mg\n",
@@ -27,6 +29,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "641eb3b0-47a4-4715-a6e3-828a090ee360",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "opticalglass v1.1.0.post1.dev1+gc1e920b\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"opticalglass v{og.__version__}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1420a547-c895-463e-a84e-60e140f6d101",
    "metadata": {},
    "outputs": [],
@@ -36,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "db330986-9dd7-482a-aa9f-383302301bcd",
    "metadata": {},
    "outputs": [
@@ -48,7 +68,7 @@
        "        2.00179144e-02, 1.03560653e+02])}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,17 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "069034b8-c5c4-4ba7-bf49-158dd099751e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<opticalglass.schott.SchottCatalog at 0x7fd47805ed30>"
+       "<opticalglass.schott.SchottCatalog at 0x30c390800>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1f9910bd-bf3f-4622-8b45-e6942db4f957",
    "metadata": {},
    "outputs": [],
@@ -90,29 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ec9677e1-418b-4554-9fa3-c6f2bd034e33",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isinstance(n2, om.OpticalMedium)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
-   "id": "038f6dd5-7c15-46b6-911d-7b0a605d783d",
+   "id": "ec9677e1-418b-4554-9fa3-c6f2bd034e33",
    "metadata": {},
    "outputs": [
     {
@@ -127,12 +126,33 @@
     }
    ],
    "source": [
-    "hasattr(n2, 'rindex')"
+    "isinstance(n2, om.OpticalMedium)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "038f6dd5-7c15-46b6-911d-7b0a605d783d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hasattr(n2, 'rindex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "04dfbb24-b74a-4f40-b42e-4f21d5462c3f",
    "metadata": {},
    "outputs": [],
@@ -142,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "97f993fa-fd72-4baa-b334-74f25cd80825",
    "metadata": {},
    "outputs": [
@@ -152,7 +172,7 @@
        "opticalglass.modelglass.ModelGlass"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,29 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f81b04ac-470a-49c3-9454-fd5f24649e00",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "isinstance(my_bk7, om.OpticalMedium)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
-   "id": "34162aa4-c6f0-4d34-801a-6c9b30a4d12c",
+   "id": "f81b04ac-470a-49c3-9454-fd5f24649e00",
    "metadata": {},
    "outputs": [
     {
@@ -200,12 +199,33 @@
     }
    ],
    "source": [
-    "hasattr(my_bk7, 'rindex')"
+    "isinstance(my_bk7, om.OpticalMedium)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "34162aa4-c6f0-4d34-801a-6c9b30a4d12c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hasattr(my_bk7, 'rindex')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "8ccdac72-6ec0-4aee-a13e-c1f07595dbbc",
    "metadata": {},
    "outputs": [
@@ -215,7 +235,7 @@
        "array([1.52237629, 1.51680003, 1.51432235])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "c8c36da0-ddac-4580-bfdb-d6140ae39502",
    "metadata": {},
    "outputs": [
@@ -239,7 +259,7 @@
        "Name: N-BK7, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "3072618e-af4a-43d1-92b4-56e84dbba115",
    "metadata": {},
    "outputs": [
@@ -260,7 +280,7 @@
        "array([1.52218406, 1.517     , 1.51458912])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,29 +291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a59c3434-770f-4afb-a9b4-f780f0440bd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'517.642'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bk7.glass_code()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
-   "id": "8a058e05-d529-4049-806c-e625a32aba22",
+   "id": "a59c3434-770f-4afb-a9b4-f780f0440bd9",
    "metadata": {},
    "outputs": [
     {
@@ -308,13 +307,111 @@
     }
    ],
    "source": [
+    "bk7.glass_code()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8a058e05-d529-4049-806c-e625a32aba22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'517.642'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "my_bk7.glass_code()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2f8bf703-95c4-4459-9318-5bd439edd08d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(1.5253195028678677),\n",
+       " np.float64(1.5185223876207927),\n",
+       " np.float64(1.5145203085647796))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bk7.rindex(450.), bk7.rindex(550.), bk7.rindex(650.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "52ff3fc1-c982-44a3-bb16-76311525c902",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(1.5223762897312285),\n",
+       " np.float64(1.5168000345005885),\n",
+       " np.float64(1.5143223472613747))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bk7.rindex('F'), bk7.rindex('d'), bk7.rindex('C')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c05d0141-6367-4bed-bf4e-3d68799d68b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndarry = np.array([bk7.rindex('F'), bk7.rindex('d'), bk7.rindex('C')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4da5c595-596a-455a-9004-e32376afde3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.5223762897312285, 1.5168000345005885, 1.5143223472613747]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndarry.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cce4da5d-ab75-42a0-87b6-5de1962310e9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -336,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
