--- a/notebooks/ModelGlass.ipynb
+++ b/notebooks/ModelGlass.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "2e524194-63b1-47ba-8e03-27e885374410",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "<opticalglass.schott.SchottCatalog at 0x30c390800>"
+       "<opticalglass.schott.SchottCatalog at 0x11c1f22d0>"
       ]
      },
      "execution_count": 6,
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "2f8bf703-95c4-4459-9318-5bd439edd08d",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        " np.float64(1.5145203085647796))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "52ff3fc1-c982-44a3-bb16-76311525c902",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        " np.float64(1.5143223472613747))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "c05d0141-6367-4bed-bf4e-3d68799d68b5",
    "metadata": {},
    "outputs": [],
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "id": "4da5c595-596a-455a-9004-e32376afde3b",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
        "[1.5223762897312285, 1.5168000345005885, 1.5143223472613747]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
