--- a/notebooks/ModelGlass dev.ipynb
+++ b/notebooks/ModelGlass dev.ipynb
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "<opticalglass.schott.SchottCatalog at 0x7f7fd916aca0>"
+       "<opticalglass.schott.SchottCatalog at 0x11f8fb920>"
       ]
      },
      "execution_count": 5,
